# new_code_linter_check

./: LICENSE  Makefile  README.md  pyproject.toml  run_analyze.sh
linter/: __init__.py  check.py  consts.py  models.py  parsers.py  run_check.py
